# libgpio

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac  libgpio.doxy.in  libgpio.pc.in
cfg/: Makefile.am  Makefile.in  at91.cfg  gpio.cfg
debian/: .gitignore  changelog  control  copyright  gbp.conf  libgpio1.install  libgpio1.postinst  libgpio1.templates  libgpio3.config  libgpio3.install  libgpio3.postinst  libgpio3.symbols  libgpio3.templates  rules  watch
debian/po/: POTFILES.in  de.po  templates.pot
debian/upstream/: metadata  signing-key.asc
examples/: Makefile.am  Makefile.in  test.c  testirq.c  testpin.1  testpin.c
include/: Makefile.am  Makefile.in  gpio.h
src/: Makefile.am  Makefile.in  config.c  gpio.c
tests/: Makefile.am  Makefile.in  test.cfg  test_gpio_init.c
tools/: ChangeLog-from-git  release.sh
