# SPDX-License-Identifier: LGPL-2.1-or-later
#
# Copyright (C) 2013 Linutronix GmbH
# Author: Manuel Traut <manut@linutronix.de>

gpiosampledir = $(docdir)/examples
gpiosample_DATA = at91.cfg

gpioconfdir = $(sysconfdir)/
gpioconf_DATA = gpio.cfg

EXTRA_DIST = at91.cfg gpio.cfg

DISTCLEANFILES = *~

MAINTAINERCLEANFILES = Makefile.in
